[package]
authors = ["郑欣 <zhngxin@aliyun.com>"]
edition = "2018"
name = "rn_spider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.1"
clap = "2.33.3"
encoding = "0.2.33"
indicatif = "0.15.0"
regex = "1.4.3"
scraper = "0.12.0"
serde = {version = "1.0.123", features = ["derive"]}
surf = "2.2.0"
toml = "0.5.8"
rand = "0.8.3"
